--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,12 +83,6 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-  # spyder:
-  #   build: ./spyder
-  #   volumes:
-  #     - ./spyder:/spyder
-  #   ports:
-  #     - 6080:6080
   tensorflow:
     build: ./tensorflow
     volumes:
@@ -101,9 +95,15 @@ services:
       - ./git:/git
     ports:
       - 9080:8080
-  # hadoop:
-  #   build: ./hadoop
-  #   volumes:
-  #     - ./hadoop:/hadoop
-  #   ports:
-  #     - 9595:8080
+  spyder:
+    build: ./spyder
+    volumes:
+      - ./spyder:/spyder
+    ports:
+      - 1010:8080
+  hadoop:
+    build: ./hadoop
+    volumes:
+      - ./hadoop:/hadoop
+    ports:
+      - 1234:8080
